<resources>
    <string name="app_name">SampleApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="search">search</string>
    <string name="notification">notification</string>
    <string name="cart">cartt</string>
    <string name="my_mall">My  Mall</string>
    <string name="my_orders">My  Orders</string>
    <string name="my_rewards">My  Rewards</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="logo_my_mall">Logo Of App</string>
    <string name="open_drawer">Open the drawer</string>
    <string name="close_drawer">Close the drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_appliances">Home Appliances</string>
    <string name="home_icon">Home Icon</string>
    <string name="sampleimage">SampleImage</string>
    <string name="strip_ad">Strip Ad</string>
    <string name="deals_of_the_day">Deals of the day</string>
    <string name="customitemad">CustomItemAd</string>
    <string name="redmi_5a">Redmi 5A</string>
    <string name="sd_425_processor">SD 425 Processor</string>
    <string name="from_rs_5999">From Rs.5999/-</string>
    <string name="title">Title</string>
    <string name="view_all">View All</string>
    <string name="product_title">Product Title</string>
    <string name="_4_5">4.5</string>
    <string name="rating_image">Rating Image</string>
    <string name="total_ratings">Total Ratings</string>
    <string name="price">Rs.4,999/-</string>
    <string name="cutted_price">Rs.5,999/-</string>
    <string name="available">Available</string>
    <string name="check_price_after_coupon_redemption">Check price after coupon redemption</string>
    <string name="reedem">Reedem</string>
    <string name="lorem_ipsum_dolor_sit_amet_eu_diam_scripta_facilis_usu_vimerat_persequeris_concludaturque_an_usu">Lorem ipsum dolor sit amet, eu diam scripta facilis usu. Vimerat persequeris concludaturque an, usu</string>
    <string name="reward_image">Reward Image</string>
    <string name="description">Description</string>
    <string name="specification">Specification</string>
    <string name="other_details">Other Details</string>
    <string name="dummy_text_in_description_fragment">Lorem ipsum dolor sit amet, eu diam scripta facilis usu. Vim erat persequeris concludaturque an, usu vidit nominati complectitur ex. Pri mundi albucius elaboraret id. Cu nam omnium audire necessitatibus. Id vel verear legimus dissentias, mea oratio petentium inciderint in. Ei ius populo similique, at mel brute petentium. Sit an vide integre, at harum blandit petentium usu, et mea eros alterum consulatu. Quot putant posidonium has ei, verear constituto sea ei. Deseruisse concludaturque mel ut. Alii senserit eum ne, est et graece tibique, civibus recusabo suscipiantur at vim.</string>
    <string name="feature_name">Feature Name</string>
    <string name="feature_value">Feature Value</string>
    <string name="product_details">Product Details</string>
    <string name="ratings">Ratings</string>
    <string name="ratingimage">RatingImage</string>
    <string name="_27_ratings">27 ratings</string>
    <string name="_5">5</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_12">12</string>
    <string name="_27">27</string>
    <string name="your_ratings">Your Ratings</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="buy_now">BUY NOW</string>
    <string name="rs_4_999">Rs.4,999/-</string>
    <string name="total_amount">Total Amount</string>
    <string name="Continue">Continue</string>
    <string name="product_image">Product Image</string>
    <string name="mi_a2_lite">Mi A2 Lite</string>
    <string name="free_coupen_icon">Free Coupen Icon</string>
    <string name="free_2_coupens">Free 2 coupens</string>
    <string name="rs_5_999">Rs.5,999/-</string>
    <string name="offers_applied">Offers Applied</string>
    <string name="coupens_applied">Coupens Applied</string>
    <string name="qty_1">Qty: 1</string>
    <string name="remove_item">Remove Item</string>
    <string name="price_details">PRICE DETAILS</string>
    <string name="price_2_items">Price (2 items)</string>
    <string name="delivery">Delivery</string>
    <string name="free">Free</string>
    <string name="rs_9999">Rs.9999/-</string>
    <string name="you_saved_rs_100_on_this_order">You saved Rs.1/- on this order</string>
    <string name="pixel_2">Pixel 2</string>
    <string name="dot">Dot</string>
    <string name="delivered_on_mon_15_jan_2017">Delivered On Mon,15 jan 2017</string>
    <string name="pixel_2a">Pixel 2a</string>
    <string name="selecteddot">SelectedDot</string>
    <string name="ordered">Ordered</string>
    <string name="mon_12th_dec_2015_7_00_a_m">Mon, 12th Dec 2015 -7:00 A.M</string>
    <string name="your_order_has_been_placed">Your Order has been placed</string>
    <string name="packed">Packed</string>
    <string name="shipping">Shipping</string>
    <string name="your_order_has_been_packed">Your Order has been packed</string>
    <string name="your_order_has_been_shipped">Your Order has been shipped</string>
    <string name="delivered">Delivered</string>
    <string name="your_order_has_been_delivered">Your order has been delivered</string>
    <string name="shipping_details">SHIPPING DETAILS</string>
    <string name="john_doe">John Doe</string>
    <string name="dhangadhi_kailali">Dhangadhi, Kailali</string>
    <string name="happy">Happy shopping</string>
    <string name="free_coupen">free coupen</string>
    <string name="_22">(22)</string>
    <string name="_22_ratings">(22)ratings</string>
    <string name="cash_on_delivery_available">Cash on delivery available</string>
    <string name="delete">Delete</string>
    <string name="discount_coupen">Discount Coupen</string>
    <string name="till_13th_august_2019">Till 13th, August 2019</string>
    <string name="get_20_off_on_any_product_above_rs_1000_and_below_rs_2500">GET 20% OFF ON ANY PRODUCT ABOVE RS.1000/- AND BELOW RS.2500/-</string>
    <string name="user_name">John Doe</string>
    <string name="user_email">johndoe@gmail.com</string>
    <string name="your_current_order_status">Your Current Order Status</string>
    <string name="out_for_delivery">OUT FOR DELIVERY</string>
    <string name="your_recent_orders">Your Recent Orders</string>
    <string name="my_addresses">My Addresses</string>
    <string name="address">Address</string>
    <string name="pin_code">Pin Code</string>
    <string name="full_name">Full Name</string>
    <string name="change_or_add_a_new_address">Change or Add a new address</string>
    <string name="cod">cod</string>
    <string name="address_icon">Address Icon</string>
    <string name="city">City*</string>
    <string name="locality_area_or_street">Locality,area or street*</string>
    <string name="flat_no_building_name">Flat no, Building name*</string>
    <string name="_hint_code">Pin Code*</string>
    <string name="state">state*</string>
    <string name="landmark_optional">Landmark(optional)</string>
    <string name="name">Name*</string>
    <string name="mobile_no">Mobile no.*</string>
    <string name="alternate_mobile_no_optional">Alternate Mobile no.(optional)</string>
    <string name="save">Save</string>
    <string name="add_a_new_address">Add a new address</string>
    <string name="_2_addresses_saved">2 addresses saved</string>
    <string name="deliver_here">Deliver Here</string>
    <string name="check_mark">Check Mark</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="just_few_steps_away_from_your_cart">Just few steps away from your cart!</string>
    <string name="cart_dialouge">Cart Dialouge</string>
    <string name="quantity">Quantity</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="your_coupen">Your Coupen</string>
    <string name="options">Options</string>
    <string name="original_price">Original Price</string>
    <string name="price_after_coupen_redemption">Price after coupen redemption</string>
    <string name="make_sure_to_apply_the_coupen_in_your_cart">* Make sure to apply the coupen in your cart.</string>
    <string name="close">Close</string>
    <string name="email">Email</string>
    <string name="password">Password (At least 8 characters)</string>
    <string name="forget_password">Forget Password?</string>
    <string name="or">Or</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="don_t_worry_we_just_need_your_registered_email_address_and_it_s_done">Don\'t worry, we just need your registered email address and it\'s done!</string>
    <string name="provide_your_registered_email_here">Provide your registered email here</string>
    <string name="reset_password">Reset Password</string>
    <string name="check_your_inbox_after_clicking_the_button_above">Check your inbox after clicking the button above</string>
    <string name="lt_lt_go_back"><![CDATA[< < Go Back]]></string>
    <string name="red_email">Red Email</string>
    <string name="recovery_email_sent_successfully_check_your_inbox">Recovery email sent successfully! Check your inbox</string>
    <string name="not_signed_in">Not Signed In</string>
    <string name="email_address">Email Address</string>
    <string name="no_internet">No Internet</string>
</resources>
