<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_search_icon"
        android:orderInCategory="100"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/main_notification_icon"
        android:orderInCategory="100"
        android:title="@string/notification"
        android:icon="@drawable/ic_notifications"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/main_cart_icon"
        android:orderInCategory="100"
        android:title="@string/cart"
        android:icon="@drawable/ic_cart"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>
</menu>
