<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorAccent"
    android:layout_marginBottom="1dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/product_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/product_image" />

    <TextView
        android:id="@+id/product_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/pixel_2a"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/coupen_icon"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:tint="@color/colorCoupen"
        app:layout_constraintBottom_toBottomOf="@+id/free_coupens"
        app:layout_constraintStart_toStartOf="@+id/product_title"
        app:layout_constraintTop_toTopOf="@+id/free_coupens"
        app:srcCompat="@drawable/coupen"
        android:contentDescription="@string/free_coupen_icon" />

    <TextView
        android:id="@+id/free_coupens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/free_coupen"
        android:textColor="@color/colorCoupen"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/coupen_icon"
        app:layout_constraintTop_toBottomOf="@+id/product_title" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/slider_background"
        android:backgroundTint="@color/colorGreen"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintTop_toBottomOf="@+id/free_coupens">

        <TextView
            android:id="@+id/tv_product_rating_miniview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="2dp"
            android:text="@string/_4_5"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/free_coupen_imageview"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="3dp"
            android:contentDescription="@string/rating_image"
            android:src="@drawable/ic_star_black_24dp"
            android:tint="@color/colorAccent" />

    </LinearLayout>

    <TextView
        android:id="@+id/total_ratings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_22_ratings"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/rs_4_999"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/cutted_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cutted_price"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/product_price"
        app:layout_constraintStart_toEndOf="@+id/product_price" />

    <TextView
        android:id="@+id/payment_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/cash_on_delivery_available"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/product_price"
        app:layout_constraintTop_toBottomOf="@+id/product_price" />

    <ImageButton
        android:id="@+id/delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_bin"
        android:contentDescription="@string/delete" />

    <View
        android:id="@+id/price_cut"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/cutted_price"
        app:layout_constraintEnd_toEndOf="@+id/cutted_price"
        app:layout_constraintStart_toStartOf="@+id/cutted_price"
        app:layout_constraintTop_toTopOf="@+id/cutted_price" />
</androidx.constraintlayout.widget.ConstraintLayout>